GNOME Bugzilla – Bug 762229
vaapisink: Fix event,pad memory leaks
Last modified: 2016-02-18 07:08:14 UTC
If sink->window is not present, then we are just returning without performing any operation. But memory is getting allocated for event and peer. Hence moving the check to the beginning before allocations.
Created attachment 321555 [details] [review] fix memory leak
Created attachment 321557 [details] [review] fix memory leaks Free structure as well on returning.
commit 24bc53456c118ce0960adb6aa958861b599a56ad Author: Vineeth TM <vineeth.tm@samsung.com> Date: Thu Feb 18 10:13:53 2016 +0900 vaapisink: Fix event,pad,structure memory leaks https://bugzilla.gnome.org/show_bug.cgi?id=762229